[workspace]
resolver = "2"
members = [
    "./crates/cli",
    "./crates/datagen-rs",
    "./crates/datagen-wasm",
    "./crates/build-vars",
    "./crates/node-runner",
    "./plugins/log-plugin",
    "./plugins/openaddresses-plugin",
    "./plugins/progress-plugin",
    "./plugins/upload-plugin",
    "./plugins/sql-plugin",
    "./packages/datagen"
]

[profile.release]
lto = true
