[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
datagen-rs = { path = "../datagen-rs", features = ["all"] }
progress-plugin = { path = "../plugins/progress-plugin", features = [], default-features = false }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
