[package]
name = "datagen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = "1.0"
indexmap = "2.0.0"
schemars = { version = "0.8.13", features = ["indexmap2"], optional = true }
rand = { version = "0.8.5", optional = true }
fake = { version = "2.8", features = ["uuid", "geo"], optional = true }
libloading = { version = "0.8.0", optional = true }
handlebars = {version = "4", optional = true}

[features]
plugin = ["dep:libloading"]
serialize = ["dep:serde", "indexmap/serde"]
map_schema = ["dep:rand"]
generate = ["map_schema", "serialize", "dep:fake", "dep:handlebars"]
schema = ["dep:serde", "dep:schemars"]
