[package]
name = "datagen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2.0.0"
serde_yaml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
quick-xml = { version = "0.30", features = ["serde", "serialize"], optional = true  }
schemars = { version = "0.8.13", features = ["indexmap2"], optional = true }
rand = { version = "0.8.5", optional = true }
fake = { version = "2.8", features = ["uuid", "geo"], optional = true }
libloading = { version = "0.8.0", optional = true }
handlebars = { version = "4", optional = true }

[features]
all = ["plugin", "serialize", "map_schema", "generate", "schema"]
plugin = ["dep:libloading"]
serialize = ["dep:serde", "indexmap/serde", "dep:serde_yaml", "dep:quick-xml"]
map_schema = ["dep:rand"]
generate = ["map_schema", "serialize", "plugin", "dep:fake", "dep:handlebars"]
schema = ["dep:serde", "dep:schemars"]
