[package]
name = "datagen-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
datagen-rs = { path = "../datagen-rs", features = ["all"] }
progress-plugin = { path = "../plugins/progress-plugin" }
serde_json = "1.0"
getrandom = { version = "0", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde", "serde_json", "serde-serialize"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4"
