[package]
name = "datagen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2.0.0"
ordered-float = "4"
once_cell = "1.18"
xml-rs = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
quick-xml = { version = "0.30", features = ["serde", "serialize"], optional = true }
schemars = { version = "0.8.13", features = ["indexmap2"], optional = true }
rand = { version = "0.8.5", optional = true }
fake = { version = "2.8", features = ["uuid", "geo"], optional = true }
libloading = { version = "0.8.0", optional = true }
handlebars = { version = "4", optional = true }
regex = { version = "1.9", optional = true }

[features]
all = ["plugin", "serialize", "generate", "schema", "native-plugin"]
plugin = ["generate"]
native-plugin = ["dep:libloading", "plugin"]
serialize = ["dep:serde", "indexmap/serde", "ordered-float/serde"]
map-schema = ["serialize", "dep:handlebars", "dep:regex", "dep:rand"]
generate = ["map-schema", "plugin", "dep:fake", "dep:serde_yaml", "dep:quick-xml", "dep:xml-rs"]
schema = ["dep:serde", "dep:schemars", "ordered-float/schemars", "serialize"]
