[package]
name = "datagen-rs"
version = "0.2.0"
edition = "2021"
description = "A random data generator written in rust"
repository = "https://github.com/MarkusJx/datagen"
license = "MIT"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2.0.0"
ordered-float = "4"
once_cell = "1.18"
anyhow = { version = "1", features = ["backtrace"] }
xml-rs = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
quick-xml = { version = "0.31", features = ["serde", "serialize"], optional = true }
schemars = { version = "0.8.13", features = ["indexmap2"], optional = true }
rand = { version = "0.8.5", optional = true }
fake = { version = "2.8", features = ["uuid", "geo"], optional = true }
libloading = { version = "0.8.0", optional = true }
handlebars = { version = "5", optional = true }
regex = { version = "1.9", optional = true }
shellexpand = { version = "3", optional = true }
abi_stable = "0.11.3"
dyn-clone = "1"

[dev-dependencies]
envmnt = "0"

[features]
all = ["plugin", "serialize", "generate", "schema", "native-plugin"]
plugin = ["generate"]
native-plugin = ["dep:libloading", "plugin"]
serialize = ["env-schema", "dep:serde", "indexmap/serde", "ordered-float/serde"]
map-schema = ["serialize", "dep:regex", "dep:handlebars", "dep:rand"]
env-schema = ["dep:shellexpand"]
generate = ["map-schema", "plugin", "dep:fake", "dep:serde_yaml", "dep:quick-xml", "dep:xml-rs"]
schema = ["dep:serde", "dep:schemars", "ordered-float/schemars", "serialize"]
test = ["plugin"]
