[package]
name = "datagen-rs"
version = "0.2.0"
edition = "2021"
description = "A random data generator written in rust"
repository = "https://github.com/MarkusJx/datagen"
license = "MIT"

[dependencies]
serde_json = { version = "~1.0", features = ["preserve_order"] }
indexmap = "~2.2"
ordered-float = "~4.2"
once_cell = "~1.19"
anyhow = { version = "~1.0", features = ["backtrace"] }
xml-rs = { version = "~0.8", optional = true }
serde_yaml = { version = "~0.9", optional = true }
serde = { version = "~1.0", features = ["derive", "rc"], optional = true }
quick-xml = { version = "~0.36", features = ["serde", "serialize"], optional = true }
schemars = { version = "~0.8", features = ["indexmap2"], optional = true }
rand = { version = "~0.8", optional = true }
fake = { version = "~2.9", features = ["uuid", "geo", "chrono"], optional = true }
chrono = { version = "~0.4", optional = true }
handlebars = { version = "~5.1", optional = true }
regex = { version = "~1.10", optional = true }
shellexpand = { version = "~3.1", optional = true }
abi_stable = { version = "~0.11", optional = true }
dyn-clone = "~1.0"
log = "~0.4"
app-state = { version = "~0.1", optional = true }
serde_path_to_error = { version = "0.1.16", optional = true }

[dev-dependencies]
envmnt = "~0.10"
mockall = "~0.12"

[features]
all = ["plugin", "serialize", "generate", "schema", "native-plugin", "validate-schema"]
plugin = ["generate"]
plugin-abi = ["dep:abi_stable", "dep:app-state"]
native-plugin = ["plugin-abi", "plugin"]
serialize = ["env-schema", "dep:serde", "dep:serde_path_to_error", "indexmap/serde", "ordered-float/serde"]
map-schema = ["serialize", "dep:regex", "dep:handlebars", "dep:rand"]
env-schema = ["dep:shellexpand"]
generate = ["map-schema", "plugin", "dep:fake", "dep:chrono", "dep:serde_yaml", "dep:quick-xml", "dep:xml-rs"]
schema = ["dep:serde", "dep:schemars", "ordered-float/schemars", "serialize"]
validate-schema = ["serialize"]
test = ["plugin"]
