[package]
name = "datagen-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
datagen-rs = { path = "../datagen-rs", features = [] }
progress-plugin = { path = "../../plugins/progress-plugin", optional = true }
getrandom = { version = "0", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = "1.0"
wasm-bindgen = "0.2"

[features]
schema = ["datagen-rs/schema"]
generate = [
    "datagen-rs/plugin",
    "datagen-rs/generate",
    "datagen-rs/serialize",
    "dep:progress-plugin",
    "dep:getrandom",
    "dep:js-sys",
    "dep:serde-wasm-bindgen"
]
