[package]
name = "datagen-rs-node-runner"
version = "0.2.0"
edition = "2021"

[dependencies]
nodejs = { version = "0.5.0", features = [], optional = true }
napi = { version = "2.14.1", features = [
    "napi8",
    "deferred_trace",
    "async",
    "serde-json"] }
napi-derive = "2.14.6"
anyhow = "1"
serde_json = "1"
datagen-rs = { path = "../../crates/datagen-rs", version = "0.2.0", features = ["all"] }
futures = "0.3.30"

[dev-dependencies]
once_cell = "1.19.0"

[features]
nodejs = ["dep:nodejs"]
