[package]
name = "datagen-rs-node-runner"
version = "0.2.0"
edition = "2021"

[dependencies]
nodejs = { git = "https://github.com/MarkusJx/rust-nodejs", features = ["napi"], optional = true }
napi = { version = "2.16.6", features = [
    "napi8",
    "deferred_trace",
    "async",
    "serde-json",
    "dyn-symbols"] }
napi-derive = "2.16.4"
anyhow = "1.0"
serde_json = "1.0"
datagen-rs = { path = "../../crates/datagen-rs", version = "0.2.0", features = ["all"] }
futures = "0.3"
log = "0.4"

[dev-dependencies]
once_cell = "1.19"

[features]
nodejs = ["dep:nodejs"]
