[package]
name = "openaddresses-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
datagen-rs = { path = "../../datagen-rs", features = ["generate"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
indexmap = { version = "2.0.0", features = ["serde"] }
rusqlite = { version = "0.29", features = ["serde_json", "bundled"], optional = true }
log = { version = "0.4", optional = true }
log4rs = { version = "1.2", optional = true }

[features]
sqlite = ["dep:rusqlite"]
log = ["dep:log", "dep:log4rs"]
