[package]
name = "datagen-rs-openaddresses-plugin"
version = "0.1.0"
edition = "2021"
description = "A plugin for datagen-rs providing support for the openaddresses.io data format"
repository = "https://github.com/MarkusJx/datagen"
license = "MIT"

[lib]
name = "openaddresses_plugin"
crate-type = ["dylib"]

[dependencies]
datagen-rs = { path = "../../crates/datagen-rs", features = ["map-schema"], version = "0.1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
indexmap = { version = "2.0.0", features = ["serde"] }
rusqlite = { version = "0.29", features = ["serde_json", "bundled"], optional = true }
log = { version = "0.4", optional = true }
log4rs = { version = "1.2", optional = true }

[build-dependencies]
regex = { version = "1.9", optional = true }
build-vars = { path = "../../crates/build-vars", optional = true }

[dev-dependencies]
datagen-rs = { path = "../../crates/datagen-rs", features = ["generate", "test"], version = "0.1.0" }
rand = "0.8"
serial_test = "2"
ordered-float = "4"

[features]
sqlite = ["dep:rusqlite", "dep:regex", "dep:build-vars"]
log = ["dep:log", "dep:log4rs"]
