[package]
name = "datagen-rs-progress-plugin"
version = "0.1.0"
edition = "2021"
description = "A progress plugin for datagen-rs"
repository = "https://github.com/MarkusJx/datagen"
license = "MIT"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
datagen-rs = { path = "../../crates/datagen-rs", features = ["generate"], version = "0.1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
rand = "0.8"

[features]
default = []
plugin = []
