[package]
name = "datagen-rs-upload-plugin"
version = "0.2.0"
edition = "2021"
description = "A plugin for datagen-rs allowing to upload files to a server."
repository = "https://github.com/MarkusJx/datagen"
license = "MIT"

[lib]
name = "upload_plugin"
crate-type = ["rlib", "dylib"]

[dependencies]
datagen-rs = { path = "../../crates/datagen-rs", version = "0.2.0", features = ["generate"] }
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
serde_json = { version = "1.0", features = ["indexmap", "preserve_order"] }
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
async-trait = "0.1"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
openidconnect = "3.5.0"
oauth2 = "4.4.2"
abi_stable = { version = "0.11.3", optional = true }
log = "0.4"
log4rs = "1.3"

[dev-dependencies]
mockito = "1"
rsa = "0.9.6"
rand = "0.8.5"

[features]
plugin-lib = ["datagen-rs/plugin-abi", "dep:abi_stable"]
default = ["plugin-lib"]
